Fix nav dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
 @media (prefers-color-scheme: light) {
     :root {
         --color-surface-default: white;
+        --color-surface-shy: rgb(247, 247, 247);
         --color-surface-inverted: #111111;
         --color-surface-accent: #C1B9F8;
         --color-surface-accent-bold: #1C1555;
@@ -35,6 +36,7 @@
   @media (prefers-color-scheme: dark) {
     :root {
         --color-surface-default: #101010;
+        --color-surface-shy: rgb(39 39 39);
         --color-surface-inverted: white;
         --color-surface-accent: #453F73;
         --color-surface-accent-bold: #09071d;
@@ -160,7 +162,7 @@ nav {
     }
 
     & a:hover {
-        background-color: rgb(247, 247, 247);
+        background-color: var(--color-surface-shy);
     }
 
     /* & a:hover::before {
